Add delete affiliations + rework apis
